Fix caption for Fig 14

--- a/skysub.tex
+++ b/skysub.tex
@@ -1001,7 +1001,7 @@ Differences are presented as a percent of the mean background level seen by obse
 \begin{figure}[t]
 \centering
 \includegraphics[width=\columnwidth]{figs/scalar_resid}
-\caption{Map of residual block-to-block surface brightness differences after sky offsets: (a) as a fraction of mean local surface brightness, (b) as a fraction of mean local surface brightness, (c) as a fraction of the standard deviation of the difference image.
+\caption{Map of residual block-to-block surface brightness differences after sky offsets: (a) as a fraction of the mean local surface brightness, (b) as a fraction of background level, (c) as a fraction of the standard deviation of the difference image.
 These graphs mimic the spatial distribution of the 2007B and 2009B WIRCam fields (\Fig{fieldmap}), with the footprints exploded to allow room for lines to connect coupled blocks.}
 \label{fig:scalar_resid}
 \end{figure}
