--- a/skysub.tex
+++ b/skysub.tex
@@ -571,7 +571,7 @@ Thus sky flat evolution is not driven by WIRCam gain instabilities, but by large
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/fw100k/fw100k_betadiff}
+\includegraphics[width=\columnwidth]{figs/fw100k_betadiff}
 \caption{Distribution of real-time sky flat scaling factors, measuring detector-to-detector zero-point differences relative to detector \#1 (red: \#2, green: \#3, blue: \#4) in $J$ and $K_s$ bands.
 }
 \label{fig:fw100k_zpdiff}
@@ -580,7 +580,7 @@ Thus sky flat evolution is not driven by WIRCam gain instabilities, but by large
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/fw100k/fw100k_chip_to_chip}
+\includegraphics[width=\columnwidth]{figs/fw100k_chip_to_chip}
 \caption{Distribution of mean detector-to-detector zero-point offsets for sky images processed by real-time sky flats.
 Zero-point offsets between detectors \#1 \& \#2, \#1 \& \#3, and \#1 \& \#4 are plotted as
 red, green and blue histograms, respectively, for the $J$-band (top) and $K_s$-band (bottom).}
@@ -681,7 +681,7 @@ Effectively, \Fig{frame_diffs_skyfrac} illustrates the \emph{flatness limit} of 
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/frame_residuals/framediffs_skyfrac_cdf}
+\includegraphics[width=\columnwidth]{figs/framediffs_skyfrac_cdf}
 \caption{Cumulative distributions of scalar difference amplitudes between individual frames and blocks in the $J$ (top) and $K_s$ (bottom) mosaics, measured as a dispersion of pixel differences at the 95\% level.
   Whether processed with \texttt{QRUN} (red), \texttt{NIGHT} (green) or \texttt{FW100K} (blue) sky flats, or observed in 2007B (solid lines) or 2009B (dotted lines), the residual amplitude differences between frames and blocks are similarly distributed.
 The mean amplitude difference is $0.3\%$ of the $J$ background brightness ($0.2\%$ in $K_s$).
