--- a/skysub.tex
+++ b/skysub.tex
@@ -1,4 +1,3 @@
-% \documentclass{aastex}
 \documentclass[iop,tighten]{emulateapj}
 \usepackage[utf8]{inputenc}
 \usepackage{apjfonts}
@@ -37,9 +36,6 @@
 \newcommand{\Eq}[1]{Eq.~\ref{eq:#1}}  % equation reference macro
 \newcommand{\Tab}[1]{Table~\ref{tab:#1}}  % table reference macro
 \newcommand{\Sec}[1]{\S\ref{sec:#1}}  % section reference macro
-
-% To track draft versions in git
-% \IfFileExists{vc.tex}{\input{vc}}{}
 
 % aastex setup
 \shorttitle{\myshorttitle}
@@ -387,6 +383,15 @@ Sky flats are an appropriate alternative, both because of the abundant backgroun
 Sky flats also have the advantage of being contemporaneous with observations: if the WIRCam flat field is variable, then sky flats can be built to track such variability.
 This is a distinct advantage over dome flats, which CFHT builds at the beginning of every WIRCam queue run, or even twilight flats that can only be built once per night.
 
+\begin{figure}[t]
+\centering
+\includegraphics[width=\columnwidth]{figs/flat_ratio_55136_Ks}
+\caption{Ratio of corresponding $K_s$ band \texttt{NIGHT} sky flat and dome sky flats.
+This ratio provides an approximate upper limit on the systematic uncertainty of flat fielding with WIRCam.
+Note that the \texttt{NIGHT} sky flats have been renormalized to remove the chip-to-chip zeropoint correction described in \Sec{skyflatconstruction}.}
+\label{fig:flatratio}
+\end{figure}
+
 Despite these advantages, sky flats are built on the assumption that all background illumination in a night sky image is proportional to the flat field function.
 Several contaminants prevent this from being true: thermal emission from the detector or telescope structures, can add a significant background in the $K_s$ band, and scattered light (\eg off the camera's cold pupil stop) further perturbs the proportionality of flat field images.
 Ideally one would subtract these contaminants from images before constructing sky flats.
@@ -395,8 +400,11 @@ Note that both dome flats and twilight flat fields can distinguish additive cont
 Dome flats are built from the differences of images taken with the lamp on and off, directly removing any thermal component from the flat field.
 Twilight flats can also treat additive contamination by capturing images at different levels of sky illumination so that linear fits to each pixel allow any additive bias to be removed.
 In the case of sky flat fielding, however, we \emph{cannot} disentangle additive from multiplicative processes in images.
-We must assume that additive contaminants are negligible, and simply divide images by the median sky shape.
-In the following sections, we test this assumption to verify that sky flats are the ideal tool for calibrating WIRCam images.
+Figure~\ref{fig:flatratio} shows a ratio of sky flats (using the \texttt{NIGHT} prescription; see below) and dome flat.
+This ratio effectively sets an approximate upper limit on the systematic accuracy of a WIRCam flat field. 
+Thus we can expect our flats to be correct within a few percent.
+To proceed, we must accept that our sky flats are not purely proportional calibrations, possibly up to the limit of few percent, and instead are a first step in our combined flux calibration and background subtraction pipeline.
+In the following sections, we test this assumption to verify that sky flats are an adequate tool for calibrating WIRCam images.
 
 A second assumption built into sky flat construction is that sky glow is uniform across the detector.
 Wide-field images of the near-infrared night sky show that sky glow has rich spatial and temporal variations.
